--- a/gateway-server.properties
+++ b/gateway-server.properties
@@ -1,3 +1,7 @@
 spring.cloud.gateway.routes[0].id=product-service
 spring.cloud.gateway.routes[0].uri=lb://product-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product/**
+
+spring.cloud.gateway.routes[1].id=order-service
+spring.cloud.gateway.routes[1].uri=lb://order-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/order/**
